[gd_scene load_steps=8 format=3 uid="uid://b3sii784xu6sk"]

[ext_resource type="Script" uid="uid://dsr57ypnvasfa" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://cxg1yppuj4n76" path="res://assets/graphics/ship/playerShip1_red.png" id="1_v0iea"]
[ext_resource type="AudioStream" uid="uid://domcnn1t7cuue" path="res://assets/audio/sfx_laser2.ogg" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://dd08apjobxpuv" path="res://assets/audio/sfx_shieldDown.ogg" id="4_dqkch"]

[sub_resource type="Gradient" id="Gradient_dqkch"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qlg0r"]
gradient = SubResource("Gradient_dqkch")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dqkch"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 4.08
gravity = Vector3(0, 20, 0)
scale_min = 5.0
scale_max = 5.0
color = Color(0.976471, 0.796078, 0.0156863, 1)
color_ramp = SubResource("GradientTexture1D_qlg0r")

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_g2els")

[node name="PlayerImage" type="Sprite2D" parent="."]
texture = ExtResource("1_v0iea")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(35.088, 40.254)
polygon = PackedVector2Array(-43.088, -0.253952, -50.088, -13.254, -81.088, -20.254, -83.088, -45.254, -71.088, -38.254, -45.088, -53.254, -43.088, -77.254, -28.088, -76.254, -24.088, -51.254, -0.0879517, -36.254, 10.912, -44.254, 7.91205, -18.254, -22.088, -13.254, -28.088, -2.25395)

[node name="LaserStartPosition" type="Marker2D" parent="."]
position = Vector2(0, -44)

[node name="ShootingCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 44)
lifetime = 0.4
process_material = SubResource("ParticleProcessMaterial_dqkch")

[connection signal="timeout" from="ShootingCooldown" to="." method="_on_shooting_cooldown_timeout"]
